crates/tlang_parser/tests/snapshots/parser_types__function_type_annotation.snap
---
source: crates/tlang_parser/tests/parser_types.rs
expression: "parse! (\"let f: fn(x: i64) -> i64 = fn(x: i64) { x };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 15,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "f",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 13,
          kind: FunctionExpression(FunctionDeclaration(
            id: 14,
            visibility: Private,
            name: Expr(
              id: 7,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "anonymous",
                    span: Span(
                      start: 0,
                      end: 0,
                      start_lc: LineColumn(
                        line: 0,
                        column: 0,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 0,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 0,
                  end: 0,
                  start_lc: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 0,
                end: 0,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
              ),
            ),
            parameters: [
              FunctionParameter(
                pattern: Pat(
                  id: 8,
                  kind: Identifier(Ident(
                    name: "x",
                    span: Span(
                      start: 30,
                      end: 31,
                      start_lc: LineColumn(
                        line: 0,
                        column: 30,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 31,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 30,
                    end: 31,
                    start_lc: LineColumn(
                      line: 0,
                      column: 30,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 31,
                    ),
                  ),
                ),
                type_annotation: Some(Ty(
                  id: 9,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "i64",
                        span: Span(
                          start: 33,
                          end: 36,
                          start_lc: LineColumn(
                            line: 0,
                            column: 33,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 36,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 33,
                      end: 36,
                      start_lc: LineColumn(
                        line: 0,
                        column: 33,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 36,
                      ),
                    ),
                  )),
                  parameters: [],
                  span: Span(
                    start: 33,
                    end: 36,
                    start_lc: LineColumn(
                      line: 0,
                      column: 33,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 36,
                    ),
                  ),
                )),
                span: Span(
                  start: 30,
                  end: 36,
                  start_lc: LineColumn(
                    line: 0,
                    column: 30,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 36,
                  ),
                ),
              ),
            ],
            params_span: Span(
              start: 29,
              end: 37,
              start_lc: LineColumn(
                line: 0,
                column: 29,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 37,
              ),
            ),
            guard: None,
            return_type_annotation: None,
            body: Block(
              id: 12,
              statements: [],
              expression: Some(Expr(
                id: 11,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "x",
                      span: Span(
                        start: 40,
                        end: 41,
                        start_lc: LineColumn(
                          line: 0,
                          column: 40,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 41,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: 40,
                    end: 41,
                    start_lc: LineColumn(
                      line: 0,
                      column: 40,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 41,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 40,
                  end: 41,
                  start_lc: LineColumn(
                    line: 0,
                    column: 40,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 41,
                  ),
                ),
              )),
              span: Span(
                start: 38,
                end: 43,
                start_lc: LineColumn(
                  line: 0,
                  column: 38,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 43,
                ),
              ),
            ),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 27,
              end: 43,
              start_lc: LineColumn(
                line: 0,
                column: 27,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 43,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 27,
            end: 43,
            start_lc: LineColumn(
              line: 0,
              column: 27,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 43,
            ),
          ),
        ),
        type_annotation: Some(Ty(
          id: 6,
          kind: Fn([
            FunctionTypeParam(
              name: Some(Ident(
                name: "x",
                span: Span(
                  start: 10,
                  end: 11,
                  start_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 11,
                  ),
                ),
              )),
              ty: Ty(
                id: 4,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "i64",
                      span: Span(
                        start: 13,
                        end: 16,
                        start_lc: LineColumn(
                          line: 0,
                          column: 13,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 16,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: 13,
                    end: 16,
                    start_lc: LineColumn(
                      line: 0,
                      column: 13,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 16,
                    ),
                  ),
                )),
                parameters: [],
                span: Span(
                  start: 13,
                  end: 16,
                  start_lc: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 16,
                  ),
                ),
              ),
            ),
          ], Ty(
            id: 5,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "i64",
                  span: Span(
                    start: 21,
                    end: 24,
                    start_lc: LineColumn(
                      line: 0,
                      column: 21,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 24,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 21,
                end: 24,
                start_lc: LineColumn(
                  line: 0,
                  column: 21,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 24,
                ),
              ),
            )),
            parameters: [],
            span: Span(
              start: 21,
              end: 24,
              start_lc: LineColumn(
                line: 0,
                column: 21,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 24,
              ),
            ),
          )),
          parameters: [],
          span: Span(
            start: 7,
            end: 24,
            start_lc: LineColumn(
              line: 0,
              column: 7,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 24,
            ),
          ),
        )),
      )),
      span: Span(
        start: 0,
        end: 44,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 44,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 44,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 44,
    ),
  ),
)
